Ensure table block has a dark mode

--- a/static/src/scss/_blocks.scss
+++ b/static/src/scss/_blocks.scss
@@ -60,3 +60,14 @@ div.block-code .highlight {
     @include dark-mode;
   }
 }
+
+div.block-table {
+  td,
+  th {
+    vertical-align: middle;
+
+    @include dark-mode {
+      color: $dark-mode-text;
+    }
+  }
+}
